updated netlify file

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,8 @@
 [build]
-command = "npm run build"
-publish="/build"
-base = "/"
+  command = "npm run build"  # Assuming your build command is `npm run build`
+  publish = "/build"        # Assuming your build output goes into the "build" folder
 
 [[redirects]]
-from ="/*"
-to ="/index.js"
-status = 200
+  from = "/*"              # Matches all unmatched routes
+  to = "/index.html"       # Redirects them to the root's index.html
+  status = 200              # Set the status code to 200 (OK)
